--- a/sass/px-vis-boxplot-dark-theme.scss
+++ b/sass/px-vis-boxplot-dark-theme.scss
@@ -9,7 +9,7 @@
    // boxplot chart
    --px-vis-box-whisker-fill-color: $violet1;
    --px-vis-box-whisker-stroke-color: $violet1;
-   --px-vis-box-whisker-median-color: $yellow-green6;
+   --px-vis-box-whisker-median-color: $violet8;
    --px-vis-box-whisker-mean-color: $gray18;
    --px-vis-box-whisker-outlier-color: $violet1;
 
