--- a/sass/px-vis-boxplot-dark-theme.scss
+++ b/sass/px-vis-boxplot-dark-theme.scss
@@ -10,8 +10,10 @@
    --px-vis-box-whisker-fill-color: $violet1;
    --px-vis-box-whisker-stroke-color: $violet1;
    --px-vis-box-whisker-median-color: $violet8;
-   --px-vis-box-whisker-mean-color: $gray18;
+   --px-vis-box-whisker-mean-color: $violet1;
+   --px-vis-box-whisker-mean-fill-color: $gray18;
    --px-vis-box-whisker-outlier-color: $violet1;
+   --px-vis-box-whisker-outlier-fill-color: transparent;
 
    // threshold
    --px-vis-threshold-color: $orange6;
