adding css vars for median width and setting default 2px

--- a/sass/px-vis-boxplot-dark-theme.scss
+++ b/sass/px-vis-boxplot-dark-theme.scss
@@ -10,6 +10,7 @@
    --px-vis-box-whisker-fill-color: $violet1;
    --px-vis-box-whisker-stroke-color: $violet1;
    --px-vis-box-whisker-median-color: $violet8;
+   --px-vis-box-whisker-median-width: 2px;
    --px-vis-box-whisker-mean-color: $violet1;
    --px-vis-box-whisker-mean-fill-color: $gray18;
    --px-vis-box-whisker-outlier-color: $violet1;
