--- a/sass/px-vis-boxplot-light-theme.scss
+++ b/sass/px-vis-boxplot-light-theme.scss
@@ -10,6 +10,7 @@ html {
   --px-vis-box-whisker-fill-color: $pink7;
   --px-vis-box-whisker-stroke-color: $pink7;
   --px-vis-box-whisker-median-color: $purple1;
+  --px-vis-box-whisker-median-width: 2px;
   --px-vis-box-whisker-mean-color: $pink7;
   --px-vis-box-whisker-mean-fill-color: $white;
   --px-vis-box-whisker-outlier-color: $pink7;
