--- a/sass/px-vis-boxplot-dark-theme.scss
+++ b/sass/px-vis-boxplot-dark-theme.scss
@@ -13,8 +13,10 @@
    --px-vis-box-whisker-median-width: 2px;
    --px-vis-box-whisker-mean-color: $violet1;
    --px-vis-box-whisker-mean-fill-color: $gray18;
+   --px-vis-box-whisker-mean-size: 20px;
    --px-vis-box-whisker-outlier-color: $violet1;
    --px-vis-box-whisker-outlier-fill-color: transparent;
+   --px-vis-box-whisker-outlier-size: 15px;
 
    // threshold
    --px-vis-threshold-color: $orange6;
